# copico-centipede

./: .gitignore  LICENSE  README.md  go.mod
centipede-32d/: README.RP2350B-Dev-Board.md  README.md  centipede-32d.kicad_pcb  centipede-32d.kicad_prl  centipede-32d.kicad_pro  centipede-32d.kicad_sch
centipede-32d/MyStuff.pretty/: Castellated Pad.kicad_mod
centipede-32d/centipede-32d.pretty/: C0603.kicad_mod  C0805.kicad_mod  C1210.kicad_mod  CASE-B_3528.kicad_mod  CONN-TH_3P-P5.08_DB128L-5.08-3P-BK-S.kicad_mod  CONN-TH_9P-P5.08_MX128-5.08-09P-GN01-CU-Y-A.kicad_mod  HDR-TH_4P-P2.54-V-M-1.kicad_mod  HOLE_D3M5_D7M0_PAD_PTH.kicad_mod  IND-SMD_L4.0-W4.0_LQH44PN2R2MP0L.kicad_mod  IND-SMD_L5.8-W5.2_CD54-4R7MT.kicad_mod  KEY-SMD_4P-L4.2-W3.2-H2.5-LS5.1-P2.2.wrl  LED0402-RD.kicad_mod  POWERDI-123_L2.8-W1.8-LS3.7-RD.kicad_mod  R0603.kicad_mod  R1206.kicad_mod  R1210.kicad_mod  (+8 more)
centipede-32e/: centipede-32e.kicad_pcb  centipede-32e.kicad_prl  centipede-32e.kicad_pro  centipede-32e.kicad_sch
centipede-32z/: centipede-32z.kicad_pcb  centipede-32z.kicad_prl  centipede-32z.kicad_pro  centipede-32z.kicad_sch
doc/: talk-cocofest-2026.md
etc/: burnlist.sh  not-poke-mon.txt  proc.sh
firmware/: .CMakeLists.txt.un~  .README.md.un~  .centipede.cpp.un~  CMakeLists.txt  README.md  centipede.cpp  cross-core.h  disk11_rom.c  hdbchs_rom.c  hdbdw3cc3_rom.c  hdbsdc_rom.c
tether/: disk.go  event.go  gloss.go  listings.go  load.go  os9_level1.go  os9_level2.go  os9api.go  plain.go  ram_coco1.go  ram_coco3.go  samvdg.go  source.go  tconsole.go  utility.go  vdg-font.go  webserver.go
(+84 files in other folders)
